# spinsv

./: Makefile  README  spinsv  spinsv.cabal
src/: Main.hs
src/Daemon/: Daemon.hs  Types.hs
src/Runner/: Main.hs  Runner.hs
test/: Helper.hs  Main.hs
