name:                 spind
version:              0.1.0
synopsis:             a service runner inspired by runsv
license:              GPL
license-file:         LICENSE
author:               Alexis Sellier <alexis@cloudhead.io>
maintainer:           Alexis Sellier <alexis@cloudhead.io>
homepage:             http://github.com/cloudhead/spinsv
bug-reports:          http://github.com/cloudhead/spinsv/issues
category:             Services, Daemons
stability:            Experimental
build-type:           Simple
cabal-version:        >= 1.10
description:          .
extra-source-files:   README

source-repository head
  type:               git
  location:           git://github.com/cloudhead/spind.git

executable spinsv
  main-is:            Runner.hs
  hs-source-dirs:     src/Runner
  default-language:   Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind
  build-depends:      base
                    , monad-control
                    , unix
                    , process
                    , stm
                    , async
                    , network

executable spind
  main-is:            Daemon.hs
  hs-source-dirs:     src/Daemon
  default-language:   Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind
  build-depends:      base
                    , monad-control
                    , blaze-builder
                    , aeson
                    , unix
                    , bytestring
                    , process
                    , transformers
                    , stm
                    , containers
                    , http-types
                    , text
                    , network
                    , conduit
                    , warp
                    , wai
