name:                 spinsv
version:              0.1.1
synopsis:             a service runner inspired by runsv
license:              GPL
license-file:         LICENSE
author:               Alexis Sellier <alexis@cloudhead.io>
maintainer:           Alexis Sellier <alexis@cloudhead.io>
homepage:             http://github.com/cloudhead/spinsv
bug-reports:          http://github.com/cloudhead/spinsv/issues
category:             Services, Daemons
stability:            Experimental
build-type:           Simple
cabal-version:        >= 1.10
description:          .
extra-source-files:   README

source-repository head
  type:               git
  location:           git://github.com/cloudhead/spinsv.git

executable spinsv
  main-is:            Main.hs
  hs-source-dirs:     src/Runner
  default-language:   Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind
  build-depends:      base
                    , monad-control
                    , unix
                    , process
                    , stm
                    , async
                    , network

executable spind
  main-is:            Daemon.hs
  hs-source-dirs:     src/Daemon
  default-language:   Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind
  build-depends:      base
                    , async
                    , monad-control
                    , blaze-builder
                    , aeson
                    , unix
                    , bytestring
                    , process
                    , transformers
                    , stm
                    , containers
                    , http-types
                    , text
                    , network
                    , conduit
                    , warp
                    , wai

library
    exposed-modules:    Runner
    hs-source-dirs:     src/Runner
    default-language:   Haskell2010
    build-depends:      base
                      , async
                      , monad-control
                      , unix
                      , process
                      , stm
                      , containers
                      , network

test-suite all
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -w -Wall -threaded -fno-warn-unused-do-bind -fno-warn-name-shadowing -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Cabal
                     , unix
                     , network
                     , containers
                     , test-framework
                     , test-framework-hunit
                     , stm
                     , spinsv
                     , HUnit
